# databot

./: project.md  pyproject.toml
src/databot_agent/: agent.py  cli.py  nodes.py  prompts.py  state.py
src/databot_server/: server.py
src/databot_server/tools/: data.py  execution.py  filesystem.py
