[project]
name = "databot"
version = "0.1.0"
description = "Automated ML system using MCP and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "click>=8.0.0",
    "polars>=1.0.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.0.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
databot = "databot_agent.cli:main"
databot-server = "databot_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databot_server", "src/databot_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
